--- a/roblokis/js/Theme/Pages/games.css
+++ b/roblokis/js/Theme/Pages/games.css
@@ -66,17 +66,7 @@ div.container-list.games-detail div.game-card-container > a:hover > a {
 
 
 /*  Badges	  */
-#game-badges-container > game-badges-list > div:not(.btr-badges-container) > ul,
-#game-badges-container > game-badges-list > div > ul.roblokis-badges-loaded {
-	display: flex;
-	flex-wrap: wrap;
-}
-
-#game-badges-container > game-badges-list > div:not(.btr-badges-container) > ul > li.badge-row,
 #game-badges-container > game-badges-list > div > ul > li.badge-row {
-	flex-direction: column;
-	align-items: center;
-
 	border-radius: var(--rk-badge-corners-radius, 20px);
 
 	border-color: var(--rk-badge-borders-color);
@@ -85,86 +75,37 @@ div.container-list.games-detail div.game-card-container > a:hover > a {
 
 	background: var(--rk-badge-background);
 	background-size: var(--rk-badge-background-image-size);
-
 }
-#game-badges-container > game-badges-list > div:not(.btr-badges-container) > ul > li.badge-row,
-#game-badges-container > game-badges-list > div > ul.roblokis-badges-loaded > li.badge-row {
-	display: flex;
-	width: calc((100% / 3) - 12px);
-	margin: 6px;
+#game-badges-container > game-badges-list > div > ul > li.badge-row {
+	max-height: unset;
+	
 	transition: all 400ms;
 	transition-timing-function: cubic-bezier(0.21, 1.46, 0.99, 0.99);
 }
-/*#game-badges-container > game-badges-list > div > ul:hover > li:not(li:hover) {
-	opacity: 0.5;
-}*/
-#game-badges-container > game-badges-list > div:not(.btr-badges-container) > ul > li.badge-row:hover,
-#game-badges-container > game-badges-list > div > ul.roblokis-badges-loaded > li.badge-row:hover {
-	transform: var(--rk-basic-animations, scale(1.2));
+#game-badges-container > game-badges-list > div > ul > li.badge-row:hover {
+	transform: var(--rk-basic-animations, scale(1.1));
 	opacity: var(--rk-basic-animations, 1);
 	z-index: var(--rk-basic-animations, 10);
 }
 
-#game-badges-container > game-badges-list > div:not(.btr-badges-container) > ul > li > div.badge-content,
-#game-badges-container > game-badges-list > div > ul.roblokis-badges-loaded > li > div.badge-content {
-	width: 100%;
-	margin-top: 9px;
-	display: flex;
-	flex-direction: column;
-	color: var(--rk-badge-bright-color);
-}
-
-#game-badges-container > game-badges-list > div:not(.btr-badges-container) > ul > li > div.badge-content > div > p,
-#game-badges-container > game-badges-list > div > ul.roblokis-badges-loaded > li > div.badge-content > div > p {
-	color: var(--rk-badge-dark-color);
-}
-
-#game-badges-container > game-badges-list > div.btr-badges-container > ul:not(.roblokis-badges-loaded) > li > div.badge-content > div > p {
-	height: auto;
-}
-
-#game-badges-container > game-badges-list > div.btr-badges-container > ul:not(.roblokis-badges-loaded) > li > div.badge-image > a > thumbnail-2d > span {
+#game-badges-container > game-badges-list > div > ul > li > div.badge-image > a > thumbnail-2d > span {
 	background-color: transparent;
 }
 
-#game-badges-container > game-badges-list > div:not(.btr-badges-container) > ul > li > div.badge-content> ul,
-#game-badges-container > game-badges-list > div > ul.roblokis-badges-loaded > li > div.badge-content > ul {
-	display: flex;
-	flex-direction: column;
+#game-badges-container > game-badges-list > div > ul > li > div.badge-content {
+	color: var(--rk-badge-bright-color);
 }
 
-#game-badges-container > game-badges-list > div:not(.btr-badges-container) > ul > li > div.badge-content> ul > li,
-#game-badges-container > game-badges-list > div > ul.roblokis-badges-loaded > li > div.badge-content > ul > li {
-	display: flex;
-	align-items: center;
-	width: 100% !important;
-	justify-content: center;
-	margin-bottom: -5px !important;
-	float: none !important;
-}
-
-#game-badges-container > game-badges-list > div:not(.btr-badges-container) > ul > li > div.badge-content> ul > li.thecut,
-#game-badges-container > game-badges-list > div > ul.roblokis-badges-loaded > li > div.badge-content > ul > li.thecut {
-	padding: 6px;
-}
-
-#game-badges-container > game-badges-list > div:not(.btr-badges-container) > ul > li > div.badge-content> ul > li > div.text-label,
-#game-badges-container > game-badges-list > div > ul.roblokis-badges-loaded > li > div.badge-content > ul > li > div.text-label {
-	padding: 0 10px 0 0;
+#game-badges-container > game-badges-list > div > ul > li > div.badge-content > div > p {
 	color: var(--rk-badge-dark-color);
 }
 
-#game-badges-container > game-badges-list > div:not(.btr-badges-container) > ul > li:not(.badge-row),
-#game-badges-container > game-badges-list > div > ul.roblokis-badges-loaded > li:not(.badge-row) {
-	width: 100%;
+#game-badges-container > game-badges-list > div > ul > li > div.badge-content> ul > li > div.text-label {
+	color: var(--rk-badge-dark-color);
 }
 
-#game-badges-container > game-badges-list > div.btr-badges-container > ul.roblokis-badges-loaded > li {
-	max-height: fit-content;
-}
-#game-badges-container > game-badges-list > div.btr-badges-container > ul.roblokis-badges-loaded > li > div.badge-content > div,
-#game-badges-container > game-badges-list > div.btr-badges-container > ul.roblokis-badges-loaded > li > div.badge-content > ul {
-	width: auto;
+.btr-badges-container .badge-row .badge-content > * {
+	width: 50%;
 }
 
 
@@ -278,11 +219,11 @@ html:not([data-btr-loaded="true"]) #rbx-private-running-games > ul > li > div.ca
 
 #game-instances #rbx-recent-server-box > li {
 	border-radius: var(--rk-publicserver-corners-radius, 20px) !important;
-
+	
 	border-color: var(--rk-publicserver-borders-color);
 	border-style: var(--rk-publicserver-borders-style);
 	border-width: var(--rk-publicserver-borders-size);
-
+	
 	background: var(--rk-publicserver-background);
 	background-size: var(--rk-publicserver-background-image-size);
 }
@@ -291,6 +232,13 @@ html:not([data-btr-loaded="true"]) #rbx-private-running-games > ul > li > div.ca
 	display: inline;
 }
 
+
+
+
+/* BTRoblox Support */
+.btr-gamedetails .server-list-section:not(#rbx-private-running-games) .card-list .card-item {
+	width: auto;
+}
 
 
 
