--- a/roblokis/js/Theme/Pages/all.css
+++ b/roblokis/js/Theme/Pages/all.css
@@ -7,12 +7,12 @@
 
 /*menus*/
 #header,
-#navigation ,
+#navigation,
 #footer-container {
 	background: var(--rk-menu-background);
 	background-size: var(--rk-menu-background-image-size);
 	
-	border-radius: var(--rk-menu-corners-radius, 20px);
+	border-radius: var(--rk-menu-corners-radius, 0px);
 
 	border-color: var(--rk-menu-borders-color);
 	border-style: var(--rk-menu-borders-style);
@@ -23,21 +23,23 @@
 	/* border-radius: 0 0 16px 16px; */
 	border-top-left-radius: 0;
 	border-top-right-radius: 0;
+	border-bottom-left-radius: 0;
 	border-top: 0;
 	border-left: 0;
 	border-right: 0;
 }
 #navigation {
-	height: fit-content;
-	max-height: 90%;
-	overflow-y: auto;
-	padding-bottom: 5px;
-	margin: 1%;
+	border-top-left-radius: 0;
+	border-bottom-left-radius: 0;
+	border-left: 0;
+	border-top: 0;
+	border-bottom: 0;
 }
 #footer-container {
 	/* border-radius: 60px 60px 0 0; */
 	border-bottom-left-radius: 0;
 	border-bottom-right-radius: 0;
+	border-top-left-radius: 0;
 	border-bottom: 0;
 	border-left: 0;
 	border-right: 0;
@@ -49,7 +51,23 @@
 
 /* Fix error message peaking under navbar */
 html .alert-system-feedback .alert {
-	top: -25%;
+	/* top: -25%; */
+	transform: translate(0, -20px);
+}
+
+:root .icon-logo {
+	border-radius: 8px;
+	
+	background: var(--rk-icon-background);
+	background-size: var(--rk-icon-background-image-size, 118px 30px);
+    /* background-size: 118px 30px; */
+}
+:root .icon-logo-r {
+	border-radius: 8px;
+	
+	background: var(--rk-icon-r-background);
+	background-size: var(--rk-icon-r-background-image-size, 30px 30px);
+	/* background-size: 30px 30px; */
 }
 
 
