--- a/roblokis/js/Theme/Pages/all.css
+++ b/roblokis/js/Theme/Pages/all.css
@@ -98,6 +98,21 @@ html .alert-system-feedback .alert {
 	box-sizing: content-box;
 }
 
+.rk-page-background {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	min-width: 100%;
+	min-height: 100%;
+	background-position: center;
+	background-size: cover;
+}
+.rk-page-background.rk-blurred {
+	filter: brightness(0.5) blur(15px);
+}
+
 /*disable ads*/
 .abp {display: none;}
 
