--- a/roblokis/js/Theme/Pages/profile.css
+++ b/roblokis/js/Theme/Pages/profile.css
@@ -28,6 +28,8 @@
 
 	background: var(--rk-profile-background, transparent);
 	background-size: var(--rk-profile-background-image-size);
+
+	backdrop-filter: var(--rk-profile-backdrop-filter);
 }
 
 #horizontal-tabs,
