--- a/roblokis/js/Theme/Pages/groups.css
+++ b/roblokis/js/Theme/Pages/groups.css
@@ -22,6 +22,7 @@
 	background-size: var(--rk-group-background-image-size);
 
 	backdrop-filter: var(--rk-group-backdrop-filter);
+	box-shadow: var(--rk-group-box-shadow);
 }
 
 #horizontal-tabs,
