--- a/roblokis/js/Theme/Pages/profile.css
+++ b/roblokis/js/Theme/Pages/profile.css
@@ -85,6 +85,7 @@
 
 #container-main > div.content {
   max-width: 1338px;
+  width: auto;
 }
 @media (max-width: 1338px) {
   #container-main > div.content {
