--- a/roblokis/js/Theme/styles/gamecards1.css
+++ b/roblokis/js/Theme/styles/gamecards1.css
@@ -1,11 +1,11 @@
-.game-card-container {
+body:not(.btr-profile) .game-card-container:not(.featured-grid-item-container) {
 	min-height: 248px;
 }
-.game-card-container:has( .rk-quickgamejoin) {
+body:not(.btr-profile) .game-card-container:not(.featured-grid-item-container):has( .rk-quickgamejoin) {
 	min-height: 270px;
 }
 /* game name */
-.game-card-container .game-card-name {
+body:not(.btr-profile) .game-card-container:not(.featured-grid-item-container) .game-card-name {
 	height: 4ch;
 	margin-left: 6px;
 	margin-right: 6px;
@@ -13,7 +13,7 @@
 	text-align: center;
 }
 /* game details/friends/friend activity bar */
-.game-card-container>a.game-card-link .game-card-info, .game-card-friend-activity {
+body:not(.btr-profile) .game-card-container:not(.featured-grid-item-container)>a.game-card-link .game-card-info, .game-card-friend-activity {
 	position: relative;
 	/* min-height: 32px; */
 	margin: 3px 6px 6px !important;
@@ -24,18 +24,18 @@
 	border-radius: 4px;
 }
 /* image auto fit & cut */
-.game-card-container>a.game-card-link .game-card-thumb-container img {
+body:not(.btr-profile) .game-card-container:not(.featured-grid-item-container)>a.game-card-link .game-card-thumb-container img {
 	width: auto;
 	z-index: -1;
 	height: 100%;
     position: absolute;
 }
-.game-card-container>a.game-card-link .game-card-thumb-container {
+body:not(.btr-profile) .game-card-container:not(.featured-grid-item-container)>a.game-card-link .game-card-thumb-container {
 	display: grid;
 	justify-items: center;
 	overflow: hidden;
 }
-.game-card-container>a.game-card-link .game-card-thumb-container .thumbnail-2d-container {
+body:not(.btr-profile) .game-card-container:not(.featured-grid-item-container)>a.game-card-link .game-card-thumb-container .thumbnail-2d-container {
 	height: 100%;
 	width: 100%;
 	display: flex;
@@ -43,7 +43,7 @@
 	background: none;
 }
 /* design */
-body .game-card-container>a.game-card-link {
+body:not(.btr-profile) .game-card-container:not(.featured-grid-item-container)>a.game-card-link {
 	transition: var(--rk-basic-animations, all 300ms ease-in-out);
 	min-height: 200px;
 	display: flex;
@@ -51,28 +51,28 @@ body .game-card-container>a.game-card-link {
     justify-content: flex-end !important;
 	height: auto !important;
 }
-body .game-card-container>a.game-card-link:hover {
+body:not(.btr-profile) .game-card-container:not(.featured-grid-item-container)>a.game-card-link:hover {
 	padding-top: 150px;
 	transform: scale(1.05);
 	/* padding-top: 156px;
 	width: calc(100% + 12px); */
 }
-#games-carousel-page body .game-card-container>a.game-card-link:hover {
+body:not(.btr-profile) #games-carousel-page .game-card-container:not(.featured-grid-item-container)>a.game-card-link:hover {
 	margin-left: -6px;
 }
-body .game-card-container>a.game-card-link .game-card-thumb-container {
+body:not(.btr-profile) .game-card-container:not(.featured-grid-item-container)>a.game-card-link .game-card-thumb-container {
 	transition: var(--rk-basic-animations, all 300ms ease-in-out);
 	height: 200px;
 	position: absolute;
     top: 0;
 }
-body .game-card-container>a.game-card-link:hover .game-card-thumb-container {
+body:not(.btr-profile) .game-card-container:not(.featured-grid-item-container)>a.game-card-link:hover .game-card-thumb-container {
 	height: 150px;
 	/* height: 162px;
 	width: calc(100% + 12px);
 	top: -6px; */
 }
-.game-card-container>a.game-card-link .rk-quickgamejoin {
+body:not(.btr-profile) .game-card-container:not(.featured-grid-item-container)>a.game-card-link .rk-quickgamejoin {
 	transition: var(--rk-basic-animations, all 300ms);
 	transform: none !important;
 	margin: 6px 6px 0 !important;
@@ -80,18 +80,18 @@ body .game-card-container>a.game-card-link:hover .game-card-thumb-container {
 	width: auto;
 	opacity: 0;
 }
-.game-card-container>a.game-card-link:hover .rk-quickgamejoin {
+body:not(.btr-profile) .game-card-container:not(.featured-grid-item-container)>a.game-card-link:hover .rk-quickgamejoin {
 	opacity: 1;
 }
-/* .game-card-container>a.game-card-link > *:not(.game-card-thumb-container) {
+/* .game-card-container:not(.featured-grid-item-container)>a.game-card-link > *:not(.game-card-thumb-container) {
 	top: calc(-42px + -4ch);
 	position: relative;
 } */
 /* shadow for better text readability */
-.game-card-thumb-container::before {
+body:not(.btr-profile) .game-card-thumb-container::before {
 	opacity: 0 !important;
 }
-.game-card-thumb-container::after {
+body:not(.btr-profile) .game-card-thumb-container::after {
 	transition: var(--rk-basic-animations, all 300ms);
 	content: '';
 	display: block;
@@ -100,35 +100,35 @@ body .game-card-container>a.game-card-link:hover .game-card-thumb-container {
 	width: 100%;
 	background: linear-gradient(transparent, hsl(0 0% 0% / 0.8));
 }
-.light-theme .game-card-thumb-container::after {
+body:not(.btr-profile).light-theme .game-card-thumb-container::after {
 	background: linear-gradient(transparent, hsl(0 0% 100% / 0.8));
 }
-a:hover .game-card-thumb-container::after {
+body:not(.btr-profile) a:hover .game-card-thumb-container::after {
 	opacity: 0;
 }
 
 /* profile space for hover */
-.game-carousel {
+body:not(.btr-profile) .game-carousel {
 	padding: 6px;
 }
-.container-list.favorite-games-container ul.hlist.game-cards {
+body:not(.btr-profile) .container-list.favorite-games-container ul.hlist.game-cards {
 	padding: 6px 6px 12px;
 }
 
 
 /* Rogold fixes */
-#pinned-container .game-card-container {
+body:not(.btr-profile) #pinned-container .game-card-container {
 	width: 150px !important;
 	min-height: unset;
 }
-#pinned-container .game-card-thumb-container {
+body:not(.btr-profile) #pinned-container .game-card-thumb-container {
 	height: 150px;
 }
-#pinned-container .game-card-link {
+body:not(.btr-profile) #pinned-container .game-card-link {
 	/* min-height: 150px; */
 	/* add 6 for spacing */
 	min-height: 156px;
 }
-#pinned-container .game-card-thumb-container::after {
+body:not(.btr-profile) #pinned-container .game-card-thumb-container::after {
 	background: transparent;
 }
