updated styles structure to allow customization

--- a/roblokis/js/Theme/styles/navbarFloat.css
+++ b/roblokis/js/Theme/styles/navbarFloat.css
@@ -82,13 +82,6 @@
 	margin: 0;
 }
 
-/* make hover effect */
-body .rbx-header .rbx-navbar li:hover {
-	border-bottom: 0 !important;
-	background-color: hsl(0 0% 50% / 0.25);
-	border-radius: var(--rk-menu-corners-radius, 12px);
-}
-
 /* moderenize searchbar */
 #navbar-search-input {
 	background: none;
@@ -96,6 +89,17 @@ body .rbx-header .rbx-navbar li:hover {
 }
 #right-navigation-header > div.navbar-search > div.input-group {
 	margin: 3px 0;
+}
+
+.rbx-header .rbx-navbar-icon-group > li.navbar-icon-item > button {
+	padding: 1px 4px;
+}
+
+/* make hover effect */
+body .rbx-header .rbx-navbar li:hover {
+	border-bottom: 0 !important;
+	background-color: hsl(0 0% 50% / 0.25);
+	border-radius: var(--rk-menu-corners-radius, 12px);
 }
 
 @media (max-width: 991px) {
