--- a/roblokis/js/Theme/styles/gamecards1.css
+++ b/roblokis/js/Theme/styles/gamecards1.css
@@ -132,3 +132,12 @@ body:not(.btr-profile) #pinned-container .game-card-link {
 body:not(.btr-profile) #pinned-container .game-card-thumb-container::after {
 	background: transparent;
 }
+
+body:not(.btr-profile).gamecards-no-text .game-card-container:not(.featured-grid-item-container)>a.game-card-link .game-card-thumb-container {
+	z-index: 5;
+}
+
+body:not(.btr-profile).gamecards-no-text .game-card-thumb-container::after {
+	background: none;
+	box-shadow: inset 0 0 32px rgba(0,0,0,0.8);
+}
